# scrapy-zstd

./: .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: index.md
scrapy_zstd/: postprocessing.py
tests/: test_postprocessing.py
